2003-10-23  John Levon  <levon@movementarian.org>

	* configure.in: bump to 0.7.1cvs

2003-10-22  John Levon  <levon@movementarian.org>

	* libop/tests/Makefile.am:
	* libop/tests/load_events_files_tests.c:
	* libop/tests/alloc_counter_tests.c: fix
	make distcheck

	* configure.in: bump to 0.7
 
2003-10-22  John Levon  <levon@movementarian.org>

	* daemon/Makefile.am:
	* daemon/opd_perfmon.h:
	* daemon/opd_perfmon.c: re-enable. Wait for children.
	More safety checking.

	* daemon/oprofiled.c: only use perfmon if !timer

2003-10-20  Philippe Elie  <phil.el@wanadoo.fr>

	* doc/oprofile.xml:
	* doc/oprofile.1.in: s/physical CPU/CPU/

2003-10-20  John Levon  <levon@movementarian.org>

	* daemon/Makefile.am:
	* daemon/opd_perfmon.h: disable perfmon nicely

	* gui/oprof_start.cpp:
	* gui/oprof_start_config.h:
	* gui/oprof_start_config.cpp:
	* gui/ui/oprof_start.base.ui: Fix reading of separate
	parameters. Add CPU and thread separation

2003-10-20  Philippe Elie  <phil.el@wanadoo.fr>

	* libpp/profile_spec.cpp: relative path are relative to current dir
	  not filename.

2003-10-20  John Levon  <levon@movementarian.org>

	* doc/oprofile.xml:
	* doc/opreport.1.in: fix --merge docs and profile specs

2003-10-20  John Levon  <levon@movementarian.org>

	* dae/opd_sample_files.c:
	* daemon/opd_mangling.c:
	* libabi/abi.cpp:
	* libabi/abi_test.cpp:
	* libabi/op_import.cpp:
	* libop/op_config.h:
	* libop/op_sample_file.h:
	* libpp/op_header.cpp: remove ctr and separate_* from
	header. Re-arrange it a little, and make it 64 bytes
	on ILP32. Bump the version.

2003-10-20  John Levon  <levon@movementarian.org>

	* libpp/arrange_profiles.cpp: rework the clashing-axes
	error message to be nicer to the user

2003-10-20  John Levon  <levon@movementarian.org>

	* libpp/arrange_profiles.cpp: if tid == tgid for
	every profile class, allow axes of both TID and TGID
	- there is no actual difference, only theoretical

2003-10-20  Philippe Elie  <phil.el@wanadoo.fr>
