@@ -1,3 +1,7 @@
+2003-10-24  John Levon  <levon@movementarian.org>
+
+	* doc/internals.xml: write some more
+
 2003-10-23  John Levon  <levon@movementarian.org>
 
 	* configure.in: bump to 0.7.1cvs
